--- a/package.json
+++ b/package.json
@@ -28,7 +28,10 @@
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/swagger": "^11.2.0",
     "@nestjs/typeorm": "^11.0.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.2",
     "nestjs-pino": "^4.4.0",
     "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2",
@@ -42,8 +45,9 @@
     "@nestjs/testing": "^11.0.1",
     "@swc/cli": "^0.6.0",
     "@swc/core": "^1.10.7",
-    "@types/express": "^5.0.0",
+    "@types/express": "^5.0.3",
     "@types/jest": "^29.5.14",
+    "@types/multer": "^2.0.0",
     "@types/node": "^22.10.7",
     "@types/supertest": "^6.0.2",
     "eslint": "^8.42.0",
@@ -51,7 +55,9 @@
     "eslint-plugin-prettier": "^5.0.0",
     "globals": "^15.14.0",
     "husky": "^9.0.11",
+    "install": "^0.13.0",
     "jest": "^29.7.0",
+    "npm": "^11.4.2",
     "prettier": "^3.4.2",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
