--- a/package.json
+++ b/package.json
@@ -32,6 +32,11 @@
     "@nestjs/typeorm": "^11.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "cookie-parser": "^1.4.7",
+    "express-basic-auth": "^1.2.1",
+    "express-session": "^1.18.2",
+    "helmet": "^8.1.0",
+    "hpp": "^0.2.3",
     "nestjs-pino": "^4.4.0",
     "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2",
